# libfon9

./: CMakeLists.txt  README.md  TODO.md  plan.md  prepare.md
Overview/: AlNum.md  Bitv.md  Filing.md  IO.md  Logging.md  Manage.md  Misc.md  Prepare.md  Subr.md  ThreadTools.md  (+1 more)
f9tws/: CMakeLists.txt  Config.h  ExgMkt.cpp  ExgMkt.hpp  ExgMktFeeder.cpp  ExgMktFeeder.hpp  ExgMktFmt.hpp  ExgMktFmt6.hpp  ExgMktPlayer.cpp  ExgMkt_UT.cpp  ExgTradingLineFix.cpp  ExgTradingLineFix.hpp  ExgTradingLineFixFactory.cpp  ExgTradingLineFixFactory.hpp  ExgTradingLineMgr.cpp  ExgTradingLineMgr.hpp  ExgTypes.hpp  README.md  TradingLineFix.cpp  TradingLineFix.hpp  TradingLineMgr.cpp  TradingLineMgr.hpp
fon9/: AQueue.hpp  AQueue_UT.cpp  Appender.cpp  Appender.hpp  Archive.hpp  Assert.c  Assert.h  Base64.cpp  Base64.hpp  Base64_UT.cpp  Bitv.h  BitvArchive.hpp  BitvDecode.cpp  BitvDecode.hpp  BitvEncode.cpp  BitvEncode.hpp  Bitv_UT.cpp  Blob.c  Blob.h  ByteVector.cpp  ByteVector.hpp  CMakeLists.txt  CharAry.hpp  CharVector.hpp  CharVector_UT.cpp  CmdArgs.cpp  CmdArgs.hpp  Comparable.hpp  ConfigFileBinder.cpp  ConfigFileBinder.hpp  ConfigLoader.cpp  ConfigLoader.hpp  ConfigLoader_UT.cpp  ConfigParser.cpp  ConfigParser.hpp  ConfigUtils.hpp  ConsoleIO.cpp  ConsoleIO.hpp  CountDownLatch.cpp  CountDownLatch.hpp  (+128 more)
fon9/auth/: AuthBase.h  AuthBase.hpp  AuthMgr.cpp  AuthMgr.hpp  AuthMgr_UT.cpp  PolicyAcl.cpp  PolicyAcl.hpp  PolicyAgent.hpp  PolicyMaster.cpp  PolicyMaster.hpp  PolicyTable.cpp  PolicyTable.hpp  PolicyTree.cpp  PolicyTree.hpp  RoleMgr.cpp  RoleMgr.hpp  SaslClient.cpp  SaslClient.hpp  SaslScram.hpp  SaslScramServer.cpp  SaslScramServer.hpp  SaslScramSha256.cpp  SaslScramSha256.hpp  SaslScramSha256Client.cpp  SaslScramSha256Client.hpp  SaslScramSha256Server.cpp  SaslScramSha256Server.hpp  UserMgr.cpp  UserMgr.hpp
fon9/buffer/: BufferList.cpp  BufferList.hpp  BufferListBuilder.hpp  BufferNode.cpp  BufferNode.hpp  BufferNodeWaiter.cpp  BufferNodeWaiter.hpp  Buffer_UT.cpp  DcQueue.cpp  DcQueue.hpp  DcQueueList.cpp  DcQueueList.hpp  FwdBuffer.hpp  FwdBufferList.hpp  MemBlock.cpp  MemBlock.hpp  MemBlockImpl.hpp  MemBlock_UT.cpp  README.md  RevBuffer.hpp  RevBufferList.hpp  RevFormat.cpp  RevFormat.hpp  RevPrint.hpp  RevPrint_UT.cpp  RevPut.hpp
fon9/crypto/: CryptoTools.hpp  Crypto_UT.cpp  Sha1.cpp  Sha1.hpp  Sha256.cpp  Sha256.hpp
fon9/fix/: FixAdminDef.hpp  FixAdminMsg.cpp  FixAdminMsg.hpp  FixApDef.hpp  FixBase.cpp  FixBase.hpp  FixBuilder.cpp  FixBuilder.hpp  FixBusinessReject.cpp  FixBusinessReject.hpp  FixCompID.cpp  FixCompID.hpp  FixConfig.cpp  FixConfig.hpp  FixFeeder.cpp  FixFeeder.hpp  FixFeeder_UT.cpp  FixParser.cpp  FixParser.hpp  FixParser_UT.cpp  FixReceiver.cpp  FixReceiver.hpp  FixReceiver_UT.cpp  FixReceiver_UT_Case.txt  FixReceiver_UT_Result.txt  FixRecorder.cpp  FixRecorder.hpp  FixRecorder_Searcher.cpp  FixRecorder_Searcher.hpp  FixRecorder_UT.cpp  FixSender.cpp  FixSender.hpp  FixSender_UT.cpp  FixSession.cpp  FixSession.hpp  IoFixSender.cpp  IoFixSender.hpp  IoFixSession.cpp  IoFixSession.hpp  IoFixSession_UT.cpp  (+1 more)
fon9/fmkt/: FmktTypes.h  FmktTypes.hpp  README.md  Symb.cpp  Symb.hpp  SymbBS.cpp  SymbBS.hpp  SymbDeal.cpp  SymbDeal.hpp  SymbDy.cpp  SymbDy.hpp  SymbIn.cpp  SymbIn.hpp  SymbRef.cpp  SymbRef.hpp  SymbTree.cpp  SymbTree.hpp  Symb_UT.cpp  Trading.cpp  Trading.hpp
fon9/framework/: Fon9Co.cpp  Framework.cpp  Framework.hpp  HttpManSession.cpp  HttpManSession.hpp  IoFactory.cpp  IoFactory.hpp  IoFactoryDgram.cpp  IoFactoryFileIO.cpp  IoFactoryTcpClient.cpp  IoFactoryTcpServer.cpp  IoManager.cpp  IoManager.hpp  IoManagerTree.cpp  IoManagerTree.hpp  NamedIoManager.cpp  NamedIoManager.hpp  SeedImporter.cpp  SeedSession.cpp  SeedSession.hpp
fon9/io/: Device.cpp  Device.hpp  DeviceAsyncOp.hpp  DeviceParseConfig.hpp  DeviceRecvEvent.hpp  DeviceStartSend.hpp  DgramBase.cpp  DgramBase.hpp  FdrDgram.cpp  FdrDgram.hpp  FdrService.cpp  FdrService.hpp  FdrServiceEpoll.cpp  FdrServiceEpoll.hpp  FdrSocket.cpp  FdrSocket.hpp  FdrSocketClient.cpp  FdrSocketClient.hpp  FdrTcpClient.cpp  FdrTcpClient.hpp  FdrTcpServer.cpp  FdrTcpServer.hpp  FileIO.cpp  FileIO.hpp  IoBase.cpp  IoBase.hpp  IoBuffer.cpp  IoBuffer.hpp  IoBufferSend.hpp  IoDev_UT.cpp  IoServiceArgs.cpp  IoServiceArgs.hpp  Manager.cpp  Manager.hpp  README.md  RecvBuffer.cpp  RecvBuffer.hpp  SendBuffer.cpp  SendBuffer.hpp  Server.cpp  (+25 more)
fon9/io/win/: IocpDgram.cpp  IocpDgram.hpp  IocpService.cpp  IocpService.hpp  IocpSocket.cpp  IocpSocket.hpp  IocpSocketClient.cpp  IocpSocketClient.hpp  IocpTcpClient.cpp  IocpTcpClient.hpp  IocpTcpServer.cpp  IocpTcpServer.hpp
fon9/seed/: CloneTree.cpp  CloneTree.hpp  ConfigGridView.cpp  ConfigGridView.hpp  Field.cpp  Field.hpp  FieldBytes.cpp  FieldBytes.hpp  FieldChars.cpp  FieldChars.hpp  FieldDecimal.hpp  FieldDyBlob.cpp  FieldDyBlob.hpp  FieldInt.hpp  FieldMaker.cpp  FieldMaker.hpp  FieldSchCfgStr.cpp  FieldSchCfgStr.hpp  FieldString.hpp  FieldTimeStamp.hpp  FieldValueFmt.hpp  Fon9Co.cpp  Layout.cpp  Layout.hpp  MaTree.cpp  MaTree.hpp  Named.cpp  Named.hpp  NamedIx.hpp  NamedPark.cpp  NamedPark.hpp  Plugins.cpp  Plugins.hpp  PluginsMgr.cpp  PluginsMgr.hpp  PodOp.cpp  PodOp.hpp  README.md  Raw.cpp  Raw.hpp  (+27 more)
fon9/sys/: Config.h  Config.hpp  FilePOSIX.hpp  FileWin32.hpp  OnWindowsMainExit.cpp  OnWindowsMainExit.hpp
fon9/web/: HttpDate.cpp  HttpDate.hpp  HttpHandler.cpp  HttpHandler.hpp  HttpHandlerStatic.cpp  HttpHandlerStatic.hpp  HttpMessage.cpp  HttpMessage.hpp  HttpParser.cpp  HttpParser.hpp  HttpPlugins.cpp  HttpSession.cpp  HttpSession.hpp  HttpStatic.cfg  UrlCodec.cpp  UrlCodec.hpp  WebSocket.cpp  WebSocket.hpp  WebSocketAuther.cpp  WebSocketAuther.hpp  WsSeedVisitor.cpp  WsSeedVisitor.hpp
fon9/web/ma/: crypto.js  fon9.css  fon9chgpass.html  fon9ma.html  fon9seed.html  fon9signon.html  gv.css  gvTable.js  sasl-scram-ut.html  sasl-ws-ut.html  sasl-ws.js  utils-seed.js  utils.js
fon9/web/signon/: crypto.js  fon9.css  fon9ma.html  fon9seed.html  fon9signon.html  sasl-scram-ut.html  sasl-scram.js  sasl-ws-ut.html  signon-ut.html  signon-ws.html  utils-seed.js  utils.js
(+15 files in other folders)
